--- a/index.html
+++ b/index.html
@@ -77,27 +77,27 @@
 
 		<!--	preliminary   --!>
 
-			<tr class="headRow"> <td id="r_id0"></td> <td id="r_id1"></td> <td id="r_id2"></td> <td id="r_id3"></td> </tr>
+<!--			<tr class="headRow"> <td id="r_id0"></td> <td id="r_id1"></td> <td id="r_id2"></td> <td id="r_id3"></td> </tr>
 			<tr> <td id="r_name0"></td> <td id="r_name1"></td> <td id="r_name2"></td> <td id="r_name3"></td> </tr>
 			<tr> <td id="r_votes0"></td> <td id="r_votes1"></td> <td id="r_votes2"></td> <td id="r_votes3"></td> </tr>
  
 			<tr class="headRow"> <td id="r_id4"></td> <td id="r_id5"></td> <td id="r_id6"></td> <td id="r_id7"></td> </tr>
 			<tr> <td id="r_name4"></td> <td id="r_name5"></td> <td id="r_name6"></td> <td id="r_name7"></td> </tr>
 			<tr> <td id="r_votes4"></td> <td id="r_votes5"></td> <td id="r_votes6"></td> <td id="r_votes7"></td> </tr>
-
+-->
 <!--			<tr class="headRow"> <td id="r_id8"></td> <td id="r_id9"></td> <td id="r_id10"></td> <td id="r_id11"></td> </tr>
 			<tr> <td id="r_name8"></td> <td id="r_name9"></td> <td id="r_name10"></td> <td id="r_name11"></td> </tr>
 			<tr> <td id="r_votes8"></td> <td id="r_votes9"></td> <td id="r_votes10"></td> <td id="r_votes11"></td> </tr>
 !--> 
  			<!-- final -->
-<!-- 			<tr class="headRow"> <td id="r_id0"></td> <td id="r_id1"></td> </tr>
-			<tr> <td id="r_name0"></td> <td id="r_name1"></td> </tr>
-			<tr> <td id="r_votes0"></td> <td id="r_votes1"></td> </tr>
+ 			<tr class="headRow"> <td id="r_id0"></td> <td id="r_id1"></td> </tr>
+	     		<tr> <td id="r_name0"></td> <td id="r_name1"></td> <td id="r_name2"></td> </tr>
+			<tr> <td id="r_votes0"></td> <td id="r_votes1"></td> <td id="r_votes2"></td> </tr>
  
-			<tr class="headRow"> <td id="r_id2"></td> <td id="r_id3"></td> </tr>
+<!--			<tr class="headRow"> <td id="r_id2"></td> <td id="r_id3"></td> </tr>
 			<tr> <td id="r_name2"></td> <td id="r_name3"></td> </tr>
- -->			<tr> <td id="r_votes2"></td> <td id="r_votes3"></td> </tr>
-
+          		<tr> <td id="r_votes2"></td> <td id="r_votes3"></td> </tr>
+-->
  		</table>
 	</div>
 
