--- a/index.html
+++ b/index.html
@@ -7,109 +7,64 @@
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="img/icon.jpg">
-	<title>滑大好声音</title>
+	<title>滑大校园偶像</title>
 </head>
 
 <body>
 
 	<!-- header -->
 	<div id="header" class="container">
-		<h1>滑大好声音-敬请期待</h1>
+		<h1>滑大校园偶像-敬请期待</h1>
 	</div>
 
-	<!-- for voting -->
-	<div id="voting" class="container">
-		<table class="table">
-			<tr>
-				<!-- add col-md-3 class for fixed column width-->
-				<th id="c_id0" class="col-md-4"></th> 
-				<th id="c_id1" class="col-md-4"></th>
-				<th id="c_id2" class="col-md-4"></th>
-			</tr>
-			<tr>
-				<td id="c_name0"></td>
-				<td id="c_name1"></td>
-				<td id="c_name2"></td>
-			</tr>
-			<!-- pic -->
-			<tr>
-				<td id="c_votes0"></td>
-				<td id="c_votes1"></td>
-				<td id="c_votes2"></td>
-			</tr>
-			<tr>
+	<div id="single" class="container">
+		<!-- Bruce put things here -->
+	</div>
+
+	<!-- for result -->
+	<div id="result">
+
+		<!-- Rebecca either replace this or modify this-->
+		<div class="container" align="center">
+			<h2> 投票结果</h2>
+		</div>
+
+		<div class="container" align="center">
+			<table>
+				<tr><td>
+					<div class="bar">
+						<div class="prog" id="c_prog0"> </div>
+					</div> </td>
 				<td>
-					<!-- add col-md-4 for equal column size-->
-					<div class="progress">
-	          <div class="progress-bar progress-bar-striped active" id="c_prog0" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-	          </div>
-        	</div>				
-        </td>
+					<div class="bar">
+						<div class="prog" id="c_prog1"> </div>
+					</div></td>
 				<td>
-					<div class="progress">
-	          <div class="progress-bar progress-bar-striped active" id="c_prog1" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-	          </div>
-        	</div>
+					<div class="bar">
+					    <div class="prog" id="c_prog2"> </div>
+					</div></td>
+				<td>
+					<div class="bar">
+						<div class="prog" id="c_prog3"> </div>
+					</div>
 				</td>
 				<td>
-					<div class="progress">
-	          <div class="progress-bar progress-bar-striped active" id="c_prog2" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-	          </div>
-        	</div>			
-        </td>
-			</tr>
-			<tr class="hide">
-				<td id="c_score0"></td>
-				<td id="c_score1"></td>
-				<td id="c_score2"></td>
-			</tr>
-			<tr id="total" class="hide">
-				<td id="c_total0"></td>
-				<td id="c_total1"></td>
-				<td id="c_total2"></td>
-			</tr>
-		</table>
+					<div class="bar">
+						<div class="prog" id="c_prog4"> </div>
+					</div>
+				</td>
+				<td>
+					<div class="bar">
+						<div class="prog" id="c_prog5"> </div>
+					</div>
+				</td></tr>
+				<tr> <td id="r_id0"> 0 </td> <td id="r_id1"> 1 </td> <td id="r_id2"> 2 </td> <td id="r_id3"> 3 </td>  <td id="r_id4"> 4 </td> <td id="r_id5"> 5 </td></tr>
+				<tr> <td id="r_name0"> Rebecca </td> <td id="r_name1"> Jeffer </td> <td id="r_name2"> Adam </td> <td id="r_name3"> Winnie </td> <td id="r_name4"> Penny </td> <td id="r_name5"> Tony </td></tr>
+				<tr> <td id="r_votes0"> 100 </td> <td id="r_votes1"> 12 </td> <td id="r_votes2"> 34 </td> <td id="r_votes3"> 134 </td> <td id="r_votes4"> 234 </td> <td id="r_votes5"> 88 </td></tr>
+			</table>
+		</div>
 	</div>
 
-	<!-- for repechage -->
-	<div id="repechage" class="container">
-		<table class="table">
-
-		<!--	preliminary   --!>
-
-<!--			<tr class="headRow"> <td id="r_id0"></td> <td id="r_id1"></td> <td id="r_id2"></td> <td id="r_id3"></td> </tr>
-			<tr> <td id="r_name0"></td> <td id="r_name1"></td> <td id="r_name2"></td> <td id="r_name3"></td> </tr>
-			<tr> <td id="r_votes0"></td> <td id="r_votes1"></td> <td id="r_votes2"></td> <td id="r_votes3"></td> </tr>
- 
-			<tr class="headRow"> <td id="r_id4"></td> <td id="r_id5"></td> <td id="r_id6"></td> <td id="r_id7"></td> </tr>
-			<tr> <td id="r_name4"></td> <td id="r_name5"></td> <td id="r_name6"></td> <td id="r_name7"></td> </tr>
-			<tr> <td id="r_votes4"></td> <td id="r_votes5"></td> <td id="r_votes6"></td> <td id="r_votes7"></td> </tr>
--->
-<!--			<tr class="headRow"> <td id="r_id8"></td> <td id="r_id9"></td> <td id="r_id10"></td> <td id="r_id11"></td> </tr>
-			<tr> <td id="r_name8"></td> <td id="r_name9"></td> <td id="r_name10"></td> <td id="r_name11"></td> </tr>
-			<tr> <td id="r_votes8"></td> <td id="r_votes9"></td> <td id="r_votes10"></td> <td id="r_votes11"></td> </tr>
-!--> 
- 			<!-- final -->
- 			<tr class="headRow"> <td id="r_id0"></td> <td id="r_id1"></td> </tr>
-	     		<tr> <td id="r_name0"></td> <td id="r_name1"></td> <td id="r_name2"></td> </tr>
-			<tr> <td id="r_votes0"></td> <td id="r_votes1"></td> <td id="r_votes2"></td> </tr>
- 
-<!--			<tr class="headRow"> <td id="r_id2"></td> <td id="r_id3"></td> </tr>
-			<tr> <td id="r_name2"></td> <td id="r_name3"></td> </tr>
-          		<tr> <td id="r_votes2"></td> <td id="r_votes3"></td> </tr>
--->
- 		</table>
-	</div>
-
-      <div id="showfour" class="container">
-      <table class="table">
-        <tr class="headRow">
-         <td id="id0"></td> <td id="id1"></td> <td id="id2"></td> <td id="id3"></td> </tr>
-		 <tr> <td id="name0"></td> <td id="name1"></td> <td id="name2"></td> <td id="name3"></td> </tr>
-		 <tr> <td id="votes0"></td> <td id="votes1"></td> <td id="votes2"></td> <td id="votes3"></td> </tr>
-		 </tr>
-      </table>
-	</div>
 
 	<!-- for poll -->
 	<div id="poll" class="container">
@@ -121,7 +76,8 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+	<script src="js/jquery-3.2.1.min.js"></script>
+	<script src="js/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/myscript.js"></script>
 </body>
